--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
   </div>
   <div class="seccion">
     <a>
-      <img class="img-seccion" src="/img/local.jpg" alt="Pasteleria La Miel">
+      <img class="img-seccion" src="/img/Local.jpg" alt="Pasteleria La Miel">
     </a>
   </div>
 </div>
