--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -19,11 +19,11 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link item-nav" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link item-nav" asp-area="Identity" asp-page="/Account/Register">Registrar</a>
     </li>
     
     <li class="nav-item">
-        <a class="nav-link item-nav" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link item-nav" asp-area="Identity" asp-page="/Account/Login">Ingresar</a>
     </li>
 }
 </ul>
