--- a/Views/Product/Edit.cshtml
+++ b/Views/Product/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<form asp-action="Edit">
+<form asp-action="Edit" enctype="multipart/form-data">
 <div class="container-detalles">
   <div class="seccion-titulo titulo-detalles" >
       <div class="form-group">
@@ -12,7 +12,7 @@
       </div>
   </div>
   <div class="img-detalles">
-    <img class="img-producto" src="/img/@Html.DisplayFor(model => model.ImagenName)" alt="@Html.DisplayFor(model => model.ImagenName)"  />
+    <img class="img-producto" src="@Url.ActionLink("MostrarImagen","Catalogo",new { id=Model.Id })" alt="@Html.DisplayFor(model => model.ImagenName)"  />
   </div>
   <div class="edit-detalles">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -27,10 +27,13 @@
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
+            <div class="form-group" style="margin-bottom: -2px;">
+                <label asp-for="Imagen" class="control-label" >Imagen</label>
+            </div>
             <div class="form-group">
-                <label asp-for="ImagenName" class="control-label text-center">Nombre de la Imagen</label>
-                <input asp-for="ImagenName" class="form-control" />
-                <span asp-validation-for="ImagenName" class="text-danger"></span>
+                <input type="file" id="real-file" hidden="hidden" asp-for="Imagen"name="upload" accept="application/jpg" required/>
+                <button type="button" id="custom-button">Cargar Imagen</button>
+                <span id="custom-text">No selecciono ningun archivo.</span>
             </div>
             <div class="form-group">
                 <label asp-for="DueDate" class="control-label text-center">Fecha de Registro</label>
