--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -581,3 +581,11 @@ body {
   align-items: center;
   grid-column: 1/3;
 }
+
+.upload-detalles{
+  margin-top: 1.25rem;
+  grid-column: 1/1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
