--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,17 +1,17 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 15px;
 }
 
-:root{
-  --color-prim:#cac52b;
+:root {
+  --color-prim: #cac52b;
 }
 
 a.navbar-brand {
@@ -44,7 +44,7 @@ html {
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
 }
 
 button.accept-policy {
@@ -72,7 +72,7 @@ body {
 }
 
 /* Agregando estilo a la pagina */
-.img-cover{
+.img-cover {
   position: relative;
   display: inline-block;
   object-fit: cover;
@@ -80,105 +80,104 @@ body {
   height: 100%;
 }
 
-.logo{
+.logo {
   height: 50px;
 }
-.carrusel-container{
+.carrusel-container {
   height: 500px;
   margin-bottom: 1.5rem;
 }
 
-.seccion-title{
+.seccion-title {
   margin-bottom: 0.5rem;
 }
-.item-nav{
+.item-nav {
   font-size: 14px;
-  color:black;
+  color: black;
   transition: all 0.3s ease;
 }
 
-.item-nav:hover{
+.item-nav:hover {
   color: var(--color-prim);
   font-size: 15px !important;
 }
-.seccion-titulo{
+.seccion-titulo {
   margin: 20px 0;
 }
 
-.titulo-seccion{
+.titulo-seccion {
   font-size: 1.3rem;
   color: #456;
   text-align: center;
   font-weight: 600;
   text-transform: uppercase;
 }
-.titulo-prim{
+.titulo-prim {
   font-size: 1.7rem;
   color: #333;
   text-align: center;
   font-weight: 600;
   text-transform: uppercase;
 }
-.seccion-container{
+.seccion-container {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 3rem;
 }
 
-.seccion{
+.seccion {
   text-align: center;
   width: 50%;
   height: auto;
   align-items: center;
 }
 
-.seccion:hover > h5{
+.seccion:hover > h5 {
   transition: all 0.5s ease;
   color: var(--color-prim);
 }
 
-.slogan-emp{
+.slogan-emp {
   margin: 20px 10%;
 }
 @media (max-width: 768px) {
   .seccion {
-      width: 100%;
-      margin-bottom: 1.5rem;
+    width: 100%;
+    margin-bottom: 1.5rem;
   }
-  .seccion-container{
+  .seccion-container {
     margin-bottom: -20px;
   }
 }
 
-.seccion-container .seccion a{
+.seccion-container .seccion a {
   width: 100%;
 }
-.seccion ul{
+.seccion ul {
   list-style: none;
 }
-.info-seccion{
+.info-seccion {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.img-seccion{
-  width:100%;
+.img-seccion {
+  width: 100%;
   height: 50vh;
   object-fit: cover;
 }
-.about{
+.about {
   display: grid;
 }
-.about-img{
+.about-img {
   background-image: url(https://lirp.cdn-website.com/6f19f68f/dms3rep/multi/opt/946852-cafe-dulceria-la-miel-collage-de-la-fachada-de-la-pasteleria-y-tortas.w1024-960w.png);
   width: 100vw;
   height: 60vh;
   background-size: cover;
-
 }
 
-.caja-titulo{
+.caja-titulo {
   display: flex;
   align-items: center;
 
@@ -188,12 +187,16 @@ body {
   margin-bottom: -20px;
   height: 15vh;
   width: 70vw;
-  background: linear-gradient(90deg, rgb(249, 251, 252) 4%, var(--color-prim) 100%);
+  background: linear-gradient(
+    90deg,
+    rgb(249, 251, 252) 4%,
+    var(--color-prim) 100%
+  );
   border: none;
   border-radius: 30px;
   box-shadow: 0px 1px 3px 1px black;
 }
-.about-titulo{
+.about-titulo {
   font-size: 2.5rem;
   margin: 0 auto;
   color: #000;
@@ -201,38 +204,39 @@ body {
   font-weight: bold;
 }
 @media (max-width: 500px) {
-  .about-titulo{
-      font-size: 1.75rem;
+  .about-titulo {
+    font-size: 1.75rem;
   }
 }
-.about .about-info{
+.about .about-info {
   margin: auto;
   width: 70vw;
 }
-.about .about-info .info-emp{
+.about .about-info .info-emp {
   display: flex;
   flex-direction: row;
 }
-.about .about-info .info-emp .direc-emp,.about .about-info .info-emp .tel-emp{
+.about .about-info .info-emp .direc-emp,
+.about .about-info .info-emp .tel-emp {
   width: 50%;
   margin-top: 20px;
 }
-.about .about-info p{
+.about .about-info p {
   text-align: center;
   font-size: 1rem;
 }
-.about .about-info h4{
+.about .about-info h4 {
   text-align: center;
   font-weight: bold;
   font-size: 2rem;
 }
-.about .about-info ul{
-  list-style:none;
+.about .about-info ul {
+  list-style: none;
   text-align: center;
   margin-left: -40px;
 }
 
-.btn-prim{
+.btn-prim {
   border: none;
   display: inline-block;
   padding: 10px 20px;
@@ -240,16 +244,16 @@ body {
   border-radius: 30px;
   background-color: #cac52be8;
 }
-.btn-prim:hover{
+.btn-prim:hover {
   transition: all 0.5s;
   background-color: #f3ed34;
   color: black;
 }
-.btn-prim a{
+.btn-prim a {
   text-decoration: none;
 }
 
-.container-form{
+.container-form {
   margin: 20px 29%;
   background-color: #fdf73218;
   padding: 20px 50px;
@@ -257,71 +261,70 @@ body {
   box-shadow: 1px 2px 1px 1px rgb(67, 66, 66);
 }
 @media (max-width: 768px) {
-  .container-form{
-
-    margin: 40px ;
+  .container-form {
+    margin: 40px;
     padding: 10px 20px;
     border-radius: 50px;
   }
 }
-.btn-form{
-  margin: 0 ;
+.btn-form {
+  margin: 0;
 }
 
-.contenedor-catalogo{
+.contenedor-catalogo {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 25px;
   margin: 0 15%;
 }
 
-.img-catalogo{
-  width:100%;
+.img-catalogo {
+  width: 100%;
   height: 30vh;
   object-fit: cover;
 }
 
-.nom-producto{
+.nom-producto {
   text-align: center;
   font-size: 1.2em;
   font-weight: bold;
 }
 
-.precio-producto{
+.precio-producto {
   text-align: center;
   font-size: 1em;
 }
 
-.btn-sec{
+.btn-sec {
   border: none;
   padding: 10px 20px;
   color: white;
   border-radius: 30px;
   background-color: #136b9e;
 }
-.btn-sec:hover{
+.btn-sec:hover {
   transition: all 0.5s;
   background-color: #1a8aca;
   color: black;
 }
-.catalogo-btn{
+.catalogo-btn {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 10px;
 }
 
-.card{
+.card {
   border: none !important;
   border-bottom: 2px solid gray !important;
   border-right: 2px solid gray !important;
   border-radius: 30px;
 }
 
-.btn-completo{
+.btn-completo {
   display: inline;
 }
 
-.container-carrito{
+.container-carrito {
   margin: 20px 10%;
   background-color: #ffffff18;
   padding: 20px 50px;
@@ -330,48 +333,47 @@ body {
   box-shadow: 5px 5px 10px 1px #d6d017;
 }
 @media (max-width: 768px) {
-  .container-carrito{
-
-    margin:20px ;
+  .container-carrito {
+    margin: 20px;
     padding: 10px 20px;
     border-radius: 50px;
   }
 }
-.container-detalles{
+.container-detalles {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin: 0 15%;
   column-gap: 20px;
 }
 
-.titulo-detalles{
+.titulo-detalles {
   grid-column: 1/3;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.img-detalles{
+.img-detalles {
   border: 2px solid black;
   box-shadow: 5px 5px 10px 1px #d6d017;
   width: 100%;
   height: 70vh;
 }
 
-.info-detalles{
+.info-detalles {
   padding: 0 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.img-producto{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.img-producto {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.btn-editar{
+.btn-editar {
   text-align: center;
   border: none;
   display: inline-block;
@@ -380,13 +382,13 @@ body {
   border-radius: 30px;
   background-color: #05d362;
 }
-.btn-editar:hover{
+.btn-editar:hover {
   transition: all 0.5s;
   background-color: #07f773;
   color: black;
 }
 
-.btn-eliminar{
+.btn-eliminar {
   text-align: center;
   border: none;
   display: inline-block;
@@ -395,45 +397,45 @@ body {
   border-radius: 30px;
   background-color: #c00000;
 }
-.btn-eliminar:hover{
+.btn-eliminar:hover {
   transition: all 0.5s;
   background-color: #ff0000;
   color: black;
 }
 
-.edit-detalles{
+.edit-detalles {
   display: flex;
   flex-direction: column;
   padding: 0 30px;
 }
-.editar-btn{
+.editar-btn {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.item-bar{
+.item-bar {
   width: 20px;
 }
-.bar-andorid{
+.bar-andorid {
   display: none;
   font-size: 100px;
 }
 @media (max-width: 658px) {
-  .bar-andorid{
-    display:inline;
+  .bar-andorid {
+    display: inline;
     position: relative;
   }
 }
-.container-buscar{
+.container-buscar {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.buscar-producto{
-  width: 500px ;
+.buscar-producto {
+  width: 500px;
   display: inline-block;
-  padding: .375rem .75rem;
+  padding: 0.375rem 0.75rem;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.7;
@@ -442,14 +444,14 @@ body {
   background-clip: padding-box;
   border: 1px solid #ced4da;
   border-radius: 20px;
-  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-.img-proforma{
+.img-proforma {
   width: 100px;
   height: 100px;
   object-fit: cover;
 }
-.carrito-btn{
+.carrito-btn {
   height: 100%;
   width: 100%;
   display: flex;
@@ -460,31 +462,31 @@ body {
   align-items: center;
 }
 
-.carrito-info{
+.carrito-info {
   display: flex;
 }
 
-.titulo-carrito{
-  font-size: .9em;
+.titulo-carrito {
+  font-size: 0.9em;
   color: #456;
   text-align: center;
   font-weight: 600;
   text-transform: uppercase;
 }
-.info-carrito{
-  font-size: .9em;
+.info-carrito {
+  font-size: 0.9em;
   color: #000;
   text-align: center;
   font-weight: 600;
   text-transform: uppercase;
 }
 @media (max-width: 860px) {
-  .container-carrito{
+  .container-carrito {
     margin: 20px 5%;
   }
 }
 
-.crud-producto{
+.crud-producto {
   margin: 20px 25%;
   background-color: #ffffff18;
   padding: 20px 50px;
@@ -492,32 +494,29 @@ body {
   border: 2px solid black;
   box-shadow: 5px 5px 10px 1px #d6d017;
 }
-.fab{
+.fab {
   width: 60px;
   text-align: center;
   font-size: 24px;
-  
 }
 
-.icons-sticky{
+.icons-sticky {
   border-radius: 50%;
-  border: #E8EBE7  5px solid;
-  margin-bottom:10px ;
+  border: #e8ebe7 5px solid;
+  margin-bottom: 10px;
 }
 
-.social{
+.social {
   position: fixed;
   right: 0px;
   bottom: 50px;
 }
 
-.social ul{
+.social ul {
   list-style: none;
-  
-  
 }
 
-.social a{
+.social a {
   display: inline-block;
   text-decoration: none;
   color: #fff;
@@ -526,20 +525,20 @@ body {
   transition: 0.1s ease;
 }
 
-.fa-facebook-messenger{
+.fa-facebook-messenger {
   background: #0084ff;
 }
 
-.fa-whatsapp{
+.fa-whatsapp {
   background: #25d366;
 }
 
-.container-contactanos{
+.container-contactanos {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
 
-.form-contactanos{
+.form-contactanos {
   margin: 0 10%;
 }
 
@@ -570,7 +569,7 @@ body {
   font-family: sans-serif;
   color: #aaa;
 }
-.detalles-btn{
+.detalles-btn {
   margin-top: 15px;
   height: 100%;
   width: 100%;
@@ -582,10 +581,61 @@ body {
   grid-column: 1/3;
 }
 
-.upload-detalles{
+.upload-detalles {
   margin-top: 1.25rem;
   grid-column: 1/1;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.crud-pago {
+  margin: 20px 25%;
+  background-color: #ffffff18;
+  padding: 20px 50px;
+  border-radius: 50px;
+  border: 2px solid black;
+  box-shadow: 5px 5px 10px 1px #d6d017;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.fr1-3{
+  grid-column: 1/3;
+}
+.d-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 10px 50px;
+  margin: 20px 5% -50px 5%;
+  row-gap: 20px;
+}
+
+.img-boleta{
+  grid-column: 1/2;
+  
+}
+.info-empresa{
+  grid-column: 2/4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.info-pago{
+  grid-column: 1/3;
+  padding: 30px;
+}
+.info-boleta{
+  grid-column: 3/4;
+  padding: 30px;
+}
+.info-fac{
+  font-size: 1rem;
+  color: #456;
+  text-align: center;
+  font-weight: bold;
+}
+.info-pa{
+  font-size: 0.8rem;
+  color: #456;
+  font-weight: bold;
 }
