--- a/Views/Catalogo/Index.cshtml
+++ b/Views/Catalogo/Index.cshtml
@@ -17,7 +17,7 @@
 </div>
 <div class="contenedor-catalogo">
     @foreach (var item in Model)
-    { @if(item.Status.Equals("A")){
+    { @if(item.Status.Equals("Activo")){
     <div class="card">
         <div class="card-body">
             <div class="card-img-actions">
