--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -35,8 +35,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label">Estado</label>
-                <input asp-for="Status" class="form-control" placeholder="Escriba el estado del producto"/>
-                <span asp-validation-for="Status" class="text-danger"></span>
+                <select asp-for="Status" class="custom-select form-control">
+                    <option value="Activo">Activo</option>
+                    <option value="Inactivo">Inactivo</option>
+                </select>
             </div>
             <div class="form-group" style="text-align: center;">
                 <input type="submit" value="Crear Producto" class="btn btn-prim" />
