--- a/Views/Shared/_MenuPartial.cshtml
+++ b/Views/Shared/_MenuPartial.cshtml
@@ -5,6 +5,8 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
+    ApplicationUser myidentity = await Task.Run(() => UserManager.GetUserAsync(User));
+    var roles = await Task.Run(() => UserManager.GetRolesAsync(myidentity));
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link item-nav" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
@@ -14,13 +16,16 @@
         </li>
         
     @*if(UserManager.GetUserName(User).Equals("admin@gmail.com") *@
-    @if(UserManager.GetUserName(User).Equals("admin@gmail.com")){
+    @if(roles.Contains("Admin")){
         <li class="nav-item">
             <a class="nav-link item-nav" asp-area="" asp-controller="Product" asp-action="Index">Catálogo</a>
         </li> // Password:Admin123*.
         <li class="nav-item">
             <a class="nav-link item-nav" asp-area="" asp-controller="Product" asp-action="Create"><i class="fas fa-plus-square"></i>  Agregar</a>
         </li> 
+        <li class="nav-item">
+            <a class="nav-link item-nav" asp-area="" asp-controller="Pedido" asp-action="Index"> Pedidos</a>
+        </li>
     }else{
         <li class="nav-item">
             <a class="nav-link item-nav" asp-area="" asp-controller="Catalogo" asp-action="Index">Catálogo</a>
