--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -280,7 +280,7 @@ body {
 
 .img-catalogo {
   width: 100%;
-  height: 30vh;
+  height: 40vh;
   object-fit: cover;
 }
 
@@ -507,16 +507,15 @@ body {
 }
 
 .social {
+  display: flex;
+  flex-direction: column;
   position: fixed;
-  right: 0px;
+  left: 0px;
   bottom: 50px;
-}
-
-.social ul {
   list-style: none;
 }
-
 .social a {
+  margin-left: 10px;
   display: inline-block;
   text-decoration: none;
   color: #fff;
@@ -638,4 +637,76 @@ body {
   font-size: 0.8rem;
   color: #456;
   font-weight: bold;
+}
+
+.serv-cotizacion{
+  opacity: 0;
+  width: 170px;
+  border: 1px solid rgb(102, 99, 99);
+  background-color: #f3f3f3;
+  border-radius: 10px 10px 10px 0px;
+  -webkit-border-radius: 10px 10px 10px 0px;
+  -moz-border-radius: 10px 10px 10px 0px;
+  -ms-border-radius: 10px 10px 10px 0px;
+  -o-border-radius: 10px 10px 10px 0px;
+  padding: 5px 4px;
+  margin-left: 10px;
+  margin-bottom: 5px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+.cotizacion{
+  font-size: 12px;
+}
+.social:hover .serv-cotizacion{
+  opacity: 1;
+  transition: all 0.5s ease;
+}
+.info-pedido {
+  font-size: 0.8em;
+  color: #000;
+  text-align: center;
+  font-weight: 600;
+}
+.btn-eliminar-pedido {
+  font-size: 0.8rem;
+  text-align: center;
+  border: none;
+  display: inline-block;
+  padding: 5px 10px;
+  color: white;
+  border-radius: 20px;
+  background-color: #c00000;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+.btn-eliminar-pedido:hover {
+  transition: all 0.5s;
+  background-color: #ff0000;
+  color: black;
+}
+.btn-editar-pedido {
+  font-size: 0.8rem;
+  text-align: center;
+  border: none;
+  display: inline-block;
+  padding: 5px 10px;
+  color: white;
+  border-radius: 30px;
+  background-color: #05d362;
+}
+.btn-editar-pedido:hover {
+  transition: all 0.5s;
+  background-color: #07f773;
+  color: black;
+}
+.bs-id {
+  width: 150px;
+}
+.bs-usuario {
+  width: 400px;
+}
+.bs-estado{
+  width: 200px;
 }
