--- a/Views/Pago/Create.cshtml
+++ b/Views/Pago/Create.cshtml
@@ -27,8 +27,9 @@
       <input asp-for="Direccion" class="form-control" placeholder="Ingrese dirección" required />
     </div>
     <div class="form-group fr1-3">
-      <label asp-for="FechaEntrega" class="control-label">Fecha de Entrega</label>
-      <input asp-for="FechaEntrega" class="form-control" type="date" required />
+      <label asp-for="FechaEntrega" class="control-label text-center">Fecha de Entrega</label>
+      <input asp-for="FechaEntrega" type="datefield" class="form-control" type="datetime-local" />
+      <span asp-validation-for="FechaEntrega" class="text-danger"></span>
     </div>
     <div class="seccion-titulo fr1-3">
       <h5 class="titulo-seccion">Metodo de pago</h5>
