--- a/Views/Pedido/PedidoUsu.cshtml
+++ b/Views/Pedido/PedidoUsu.cshtml
@@ -1,27 +1,11 @@
 ﻿@model IEnumerable<LaMielApp.Models.Pedido>
 @{
-  ViewData["Title"] = "Pedidos de pedidos";
+
+  ViewData["Title"] = "Pedidos del cliente";
 }
 
 <div class="seccion-titulo">
   <h5 class="titulo-prim">@ViewData["Title"]</h5>
-</div>
-<div>
-  <form class="container-buscar">
-    <input class="form-control buscar-producto bs-id" type="search" placeholder="Buscar por Id" aria-label="Search"
-      value="@ViewData["Getemployeedetails"]" name="EmpsearchId">
-    <input class="form-control buscar-producto bs-usuario" type="search" placeholder="Buscar por Usuario"
-      aria-label="Search" value="@ViewData["Getemployeedetails1"]" name="EmpsearchUsu">
-    <select class="form-control buscar-producto bs-estado" aria-label="Search" value="@ViewData["Getemployeedetails2"]"
-      name="EmpsearchEst">
-      <option value="TODOS">Todos</option>
-      <option value="PENDIENTE">Pendiente</option>
-      <option value="ENTREGADO">Entregado</option>
-      <option value="CANCELADO">Cancelado</option>
-    </select>
-
-    <button class="btn btn-prim" type="submit">Buscar</button>
-  </form>
 </div>
 <div class="seccion-titulo">
   <h5 class="titulo-seccion">@ViewData["Message"]</h5>
@@ -32,9 +16,6 @@
       <tr>
         <th>
           <h5 class="titulo-carrito">ID</h5>
-        </th>
-        <th>
-          <h5 class="titulo-carrito">Usuario</h5>
         </th>
         <th>
           <h5 class="titulo-carrito">Cliente</h5>
@@ -64,11 +45,6 @@
           <td>
             <h5 class="info-pedido">
               @Html.DisplayFor(modelItem => item.ID)
-            </h5>
-          </td>
-          <td>
-            <h5 class="info-pedido">
-              @Html.DisplayFor(modelItem => item.UserID)
             </h5>
           </td>
           <td>
@@ -104,7 +80,7 @@
           @if (item.Status != "ENTREGADO")
           {
             <td class="info-pedido">
-              <a class="btn-editar" asp-action="Edit" asp-route-id="@item.ID">Editar</a>
+              <a class="btn-editar" asp-action="EditUsu" asp-route-id="@item.ID">Editar</a>
             </td>
           }
         </tr>
@@ -113,10 +89,5 @@
   </table>
 </div>
 <div class="col-md-4 offset-md-4 text-center">
-  <form asp-action="Reporte" class="container-buscar" target="_blank">
-    <input type="hidden" value="@ViewData["Getemployeedetails"]" name="EmpsearchId" />
-    <input type="hidden" value="@ViewData["Getemployeedetails1"]" name="EmpsearchUsu" />
-    <input type="hidden" value="@ViewData["Getemployeedetails2"]" name="EmpsearchEst" />
-    <button class="btn btn-eliminar" type="submit"><i class="fas fa-file-pdf"></i> Exportar datos a Pdf</button>
-  </form>
+  <a class="btn btn-eliminar" asp-action="ReporteUsu"><i class="fas fa-file-pdf"></i> Exportar datos a Pdf</a>
 </div>
