--- a/Views/Product/Delete.cshtml
+++ b/Views/Product/Delete.cshtml
@@ -5,57 +5,57 @@
     ViewData["Title"] = "Delete";
 }
 
-<div class="seccion-titulo" >
-  <h5 class="titulo-prim">Eliminar</h5>
+<div class="seccion-titulo">
+    <h5 class="titulo-prim">Eliminar</h5>
 </div>
-<div class="seccion-titulo" >
-  <h5 class="titulo-prim">Estas seguro que quieres eliminar este preducto?</h5>
+<div class="seccion-titulo">
+    <h5 class="titulo-prim">Estas seguro que quieres eliminar este preducto?</h5>
 </div>
 <div class="crud-producto">
     <h4>Producto</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             Nombre
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             Descripción
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Descripcion)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             Precio
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Price)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             Imagen
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ImagenName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             Registro
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DueDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             Estado
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Status)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-eliminar" /> |
+        <input type="submit" value="ELIMINAR" class="btn btn-eliminar" /> |
         <a asp-action="Index" class="btn btn-prim">Regresar al catálogo</a>
     </form>
 </div>
