--- a/Views/Product/Edit.cshtml
+++ b/Views/Product/Edit.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label text-center">Precio</label>
-                <input asp-for="Price" class="form-control" />
+                <input asp-for="Price" class="form-control" type="number" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group" style="margin-bottom: -2px;">
