--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -18,24 +18,27 @@
 <div class="contenedor-catalogo">
     @foreach (var item in Model)
     {
-        <div class="card">
-            <div class="card-body">
-                <div class="card-img-actions">
-                    <img class="img-catalogo" src="@Url.ActionLink("MostrarImagen","Catalogo",new { id=item.Id })"
+        if (item.Status != "ELIMINADO")
+        {
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-img-actions">
+                        <img class="img-catalogo" src="@Url.ActionLink("MostrarImagen","Catalogo",new { id=item.Id })"
                     alt="@item.ImagenName" />
+                    </div>
+                </div>
+                <div class="card-body">
+                    <h5 class="nom-producto">@Html.DisplayFor(modelItem => item.Name)</h5>
+                    <p class="precio-producto">@Html.DisplayFor(modelItem => item.Price)</p>
+                    <div class="catalogo-btn">
+                        <a class="btn btn-editar" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                        <a class="btn btn-eliminar" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+                    </div>
+                    <div class="form-group mt-3">
+                        <a class="btn btn-prim form-control" asp-action="Details" asp-route-id="@item.Id">Detalles</a>
+                    </div>
                 </div>
             </div>
-            <div class="card-body">
-                <h5 class="nom-producto">@Html.DisplayFor(modelItem => item.Name)</h5>
-                <p class="precio-producto">@Html.DisplayFor(modelItem => item.Price)</p>
-                <div class="catalogo-btn">
-                    <a class="btn btn-editar" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
-                    <a class="btn btn-eliminar" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
-                </div>
-                <div class="form-group mt-3">
-                    <a class="btn btn-prim form-control" asp-action="Details" asp-route-id="@item.Id">Detalles</a>
-                </div>
-            </div>
-        </div>
+        }
     }
 </div>
