--- a/Views/Product/Edit.cshtml
+++ b/Views/Product/Edit.cshtml
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="img-detalles">
-            <img class="img-producto" src="@Url.ActionLink("MostrarImagen","Catalogo",new { id=Model.Id })"
+            <img class="img-producto" src="@Url.ActionLink("MostrarImagen","Product",new { id=Model.Id })"
                 alt="@Html.DisplayFor(model => model.ImagenName)" />
         </div>
         <div class="edit-detalles">
